# cytoatlas

./: .gitignore  .smbdeleteAAAd5ab479a750be002  CLAUDE.md  DECISIONS.md  DOCUMENTATION_CLEANUP_SUMMARY.md  README.md  check_viz_health.sh  run_orchestrator.sh
cytoatlas-api/: .env.example  .env.hpc  ARCHITECTURE.md  Dockerfile  README.md  SECURITY_IMPLEMENTATION.md  SESSION_LOG.md  alembic.ini  docker-compose.yml  pyproject.toml  test_all_questions.py  test_claude_vs_mistral.py  test_endpoints.py  test_mistral_all_questions.py
cytoatlas-api/agents/: __init__.py  progress_tracker.py  validation_generator.py
cytoatlas-api/agents/qa_checkers/: __init__.py  coverage_reporter.py  endpoint_checker.py  schema_validator.py
cytoatlas-api/alembic/: env.py
cytoatlas-api/alembic/versions/: 20260128_0001_initial_schema.py  20260131_0002_add_chat_submit.py  20260209_0003_add_rbac_security.py
cytoatlas-api/app/: __init__.py  config.py  main.py
cytoatlas-api/app/core/: __init__.py  audit.py  cache.py  cache_tiers.py  database.py  logging.py  permissions.py  rate_limit.py  security.py  security_headers.py  streaming.py
cytoatlas-api/app/models/: __init__.py  atlas.py  cell_type.py  computed_stat.py  conversation.py  job.py  sample.py  signature.py  user.py  validation_metric.py
cytoatlas-api/app/repositories/: __init__.py  base.py  duckdb_repository.py  json_repository.py  parquet_repository.py  protocols.py  sqlite_scatter_repository.py  sqlite_singlecell_repository.py  versioning.py
cytoatlas-api/app/routers/: __init__.py  atlases.py  auth.py  chat.py  cima.py  cross_atlas.py  export.py  gene.py  health.py  inflammation.py  perturbation.py  pipeline.py  scatlas.py  search.py  spatial.py  submit.py  validation.py  websocket.py
cytoatlas-api/app/routers/v2/: __init__.py  atlases.py  validation.py
cytoatlas-api/app/schemas/: __init__.py  atlas.py  bulk_validation.py  chat.py  cima.py  common.py  cross_atlas.py  gene.py  inflammation.py  scatlas.py  search.py  submit.py  validation.py
cytoatlas-api/app/services/: __init__.py  atlas_registry.py  base.py  bulk_validation_service.py  chat_service.py  chat_service_legacy.py  cima_service.py  context_manager.py  cross_atlas_service.py  gene_service.py  generic_atlas_service.py  h5ad_service.py  inflammation_service.py  mcp_tools.py  perturbation_service.py  pipeline_service.py  scatlas_service.py  search_service.py  spatial_service.py  submit_service.py  validation_service.py
cytoatlas-api/app/services/chat/: README.md  __init__.py  chat_service.py  conversation_service.py  embeddings.py  input_sanitizer.py  llm_client.py  rag_service.py  tool_definitions.py  tool_executor.py
cytoatlas-api/app/tasks/: __init__.py  celery_app.py  process_atlas.py
cytoatlas-api/docs/: SECURITY.md
cytoatlas-api/frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
cytoatlas-api/frontend/e2e/: atlas-detail.spec.ts  home.spec.ts  search.spec.ts  validation.spec.ts
cytoatlas-api/frontend/src/: index.css  main.tsx
cytoatlas-api/frontend/src/__tests__/: setup.ts
cytoatlas-api/frontend/src/api/: client.ts
cytoatlas-api/frontend/src/lib/: atlas-config.ts  constants.ts  utils.ts
cytoatlas-api/frontend/src/routes/: about.tsx  atlas-detail.tsx  chat.tsx  compare.tsx  explore.tsx  gene-detail.tsx  home.tsx  index.tsx  not-found.tsx  perturbation.tsx  root-layout.tsx  search.tsx  spatial.tsx  submit.tsx  validate.tsx
cytoatlas-api/frontend/src/stores/: app-store.ts  atlas-store.ts  filter-store.ts  validation-store.ts
cytoatlas-api/nginx/: nginx.conf
cytoatlas-api/scripts/: generate_validation_data.py  run_server.sh  run_singularity.sh  security_audit.sh  seed_database.py  setup_database.sh  verify_security.py
cytoatlas-api/scripts/slurm/: run_api.sh  run_api_interactive.sh
cytoatlas-api/security/: .gitignore  SECURITY_CHECKLIST.md  manual-audit-checklist.md
cytoatlas-api/singularity/: cytoatlas-api.def
cytoatlas-api/static/: index.html
cytoatlas-api/static/css/: main.css
cytoatlas-api/static/data/: gene_info.json  gene_info_complete.json  signature_gene_mapping.json
cytoatlas-api/static/js/: api.js  app.js  data-loader.js  router.js  store.js  test-components.html
cytoatlas-api/static/js/components/: atlas-card.js  chat-viz.js  chat-widget.js  export-button.js  filter-bar.js  forest-plot.js  heatmap.js  loading-skeleton.js  sankey.js  scatter.js  tab-panel.js
cytoatlas-api/static/js/pages/: about.js  atlas-detail-example.js  (+12 more)
cytoatlas-api/tests/: __init__.py  conftest.py  test_perturbation_router.py  test_perturbation_service.py  test_security.py  test_spatial_router.py  test_spatial_service.py
cytoatlas-api/tests/data_validation/: test_json_integrity.py  test_schema.py
cytoatlas-api/tests/e2e/: test_workflows.py
cytoatlas-api/tests/fixtures/: activity_summary.json  correlations.json  differential.json  validation_results.json
cytoatlas-api/tests/integration/: test_api.py  test_duckdb_equivalence.py
cytoatlas-api/tests/unit/: test_audit.py  test_cache_tiers.py  test_chat_service.py  test_duckdb_repository.py  test_repositories.py  test_search_service.py  test_security.py  test_services.py  test_streaming.py  test_validation_service.py
cytoatlas-pipeline/: README.md  pipeline.yaml  pyproject.toml
cytoatlas-pipeline/config/: default.yaml  hpc.yaml
cytoatlas-pipeline/src/cytoatlas_pipeline/: __init__.py  cli.py  pipeline.py
cytoatlas-pipeline/tests/: __init__.py  conftest.py
cytoatlas-pipeline/tests/equivalence/: __init__.py  conftest.py  test_csv_json_equivalence.py  test_json_duckdb_equivalence.py  test_perturbation_equiv.py  test_spatial_equiv.py
cytoatlas-pipeline/tests/integration/: __init__.py
cytoatlas-pipeline/tests/unit/: __init__.py  test_cli.py  test_core.py  test_correlation.py  test_differential.py  test_search.py
(+624 files in other folders)
