[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cytoatlas-api"
version = "0.1.0"
description = "FastAPI server for CytoAtlas single-cell cytokine activity visualization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Seongyong Park", email = "seongyong.park@nih.gov"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    # Core FastAPI
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Caching & Background Tasks
    "redis>=5.0.0",
    "celery[redis]>=5.3.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.0.0",

    # Data processing
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "anndata>=0.10.0",
    "h5py>=3.10.0",
    "pyarrow>=15.0.0",

    # Utilities
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "orjson>=3.9.0",
    "aiofiles>=23.2.0",

    # WebSocket
    "websockets>=11.0",

    # LLM Integration
    "openai>=1.0.0",
    "anthropic>=0.7.0",  # Fallback when vLLM is unavailable

    # RAG (Retrieval Augmented Generation)
    "lancedb>=0.4.0",
    "sentence-transformers>=2.2.0",

    # Monitoring
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pip-audit>=2.7.0",
    "bandit>=1.7.0",
]

[project.scripts]
cytoatlas = "app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["app", "agents"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["app", "agents"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing"
